# freesoccer

./: Howtoplay.md  Makefile  ProjectHome.md  README  TODOlist.md  actions.h  configure  configure.ac  engine.c  football.sh  librobot.h  robot.c  testGUI.c  utilities.h
autom4te.cache/: output.1  requests  traces.0
src/: Makefile.am  Makefile.in  actions.c  actions.h  comm.c  comm.h  coordinate.c  coordinate.h  engine.c  engine.h  global.h  librobot.c  librobot.h  robot.c  testGUI.c  utilities.c
trunk/: AUTHORS  Makefile.am  Makefile.in  README  actions.c  config.h.in  configure  configure.ac  coordinate.c  demo.sh  engine.c  engine.h  librobot.c  robot.c  utilities.c
trunk/autom4te.cache/: output.0  requests  traces.0  traces.1
trunk/src/: Makefile.in  actions.c  actions.h  comm.c  engine.c  librobot.c  librobot.h  robot.c  robot.h  testGUI.c  utilities.c  utilities.h
wiki/: Howtoplay.wiki  TODOlist.wiki
